tests/fixtures/invalid/key-single-open-bracket.stderr
TOML parse error at line 1, column 2
  |
1 | [
  |  ^
Unexpected end of input
Expected key
While parsing a Table Header
